--- a/AquaFeel/Localizable.xcstrings
+++ b/AquaFeel/Localizable.xcstrings
@@ -19,6 +19,9 @@
     "*" : {
 
     },
+    "# %lld" : {
+
+    },
     "%@" : {
 
     },
@@ -1190,6 +1193,7 @@
       }
     },
     "Route It" : {
+      "extractionState" : "stale",
       "localizations" : {
         "es-419" : {
           "stringUnit" : {
