--- a/AquaFeel/Localizable.xcstrings
+++ b/AquaFeel/Localizable.xcstrings
@@ -1143,6 +1143,9 @@
         }
       }
     },
+    "record updated sucessfully" : {
+
+    },
     "Red" : {
 
     },
@@ -1171,6 +1174,9 @@
           }
         }
       }
+    },
+    "Route Created Successfully" : {
+
     },
     "Route Info" : {
       "localizations" : {
